# tad

./: .gitignore  Cargo.toml  README.md  requirements.md  tad.yml
src/: config.rs  main.rs  test_cases.rs  tests.rs
