[package]
name = "tad"
edition = "2021"
version = "0.1.0"
authors = ["Vagiz Duseev <vagiz@duseev.com>"]
license = "Apache-2.0"
description = "Program to test solutions of algorithms & data structures problems"
readme = "README.md"
homepage = "https://github.com/vduseev/tad"
repository = "https://github.com/vduseev/tad"
keywords = ["hackerrank", "leetcode", "test", "algorithms"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
glob = "0.3.0"
difference = "2.0"
console = "0.15.0"
indicatif = "0.16.2"
